# Web3-Algorand-NFTs-Dapp

./: Pipfile  README.md  requirements.txt
.github/workflows/: tests.yml
algokit_sample/playground/calculator/: calculator.py
backend/: README.md  algorand_utils.py  app.py  certificate_api.py  certificate_utils.py  challenge_api.py  models.py  requirements.txt  trail.ipynb  user_api.py  views.py
frontend/: package-lock.json  package.json
frontend/src/pages/: Home.jsx
notebooks/: explore_algorand.ipynb  generate_certificate.ipynb  playground.ipynb  playground_algorand.ipynb
scripts/: generate_image_utils.py
tenx_fullstack/: .copier-answers.yml  README.md
tenx_fullstack/.github/workflows/: smart-contracts-ci.yaml
tenx_fullstack/backend/: .algokit.toml  .copier-answers.yml  README.md  package-lock.json  pyproject.toml
tenx_fullstack/backend/smart_contracts/artifacts/hello_world/: application.json  approval.teal
tenx_fullstack/frontend/: .copier-answers.yml  package-lock.json  package.json  tailwind.config.js
tenx_fullstack/frontend/src/: App.tsx  HomePage.tsx  main.tsx  vite-env.d.ts
tenx_fullstack/frontend/src/api/: auth.ts  certificates.ts  request.ts
tenx_fullstack/frontend/src/components/: Account.tsx  Certificates.tsx  CreateAsset.tsx  DesktopSidebar.tsx  Header.tsx  Loading.tsx  Notification.tsx  PasswordInput.tsx  Sidebar.tsx  SubmitButton.tsx  TextInput.tsx
tenx_fullstack/frontend/src/contracts/: hello_world.ts
tenx_fullstack/frontend/src/interfaces/: types.ts
tenx_fullstack/frontend/src/pages/: Dashboard.tsx  (+1 more)
tests/: test_app.py
(+7 files in other folders)
